--- a/.github/workflows/automatic-release.yml
+++ b/.github/workflows/automatic-release.yml
@@ -1,4 +1,4 @@
-name: Automatic release tudu-dal
+name: Automatic release
 on:
   push:
     tags:
@@ -20,4 +20,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm install --global github-release-cli
       - run: npm run set:package-version
-      - run: github-release upload --owner ${{ secrets.REPO_OWNER }} --repo tudu-dal --tag $(./package-version.bash) --name "Version $(./package-version.bash) of @eurek-ai/tudu-dal" --token ${{ secrets.NPM_USER_TOKEN }} --body "${{ github.event.head_commit.message }}"
+      - run: github-release upload --owner ${{ secrets.REPO_OWNER }} --repo witoto-ts --tag $(./package-version.bash) --name "Version $(./package-version.bash) of @eurek-ai/witoto-ts" --token ${{ secrets.NPM_USER_TOKEN }} --body "${{ github.event.head_commit.message }}"
